# WindowRenderer

./: .gitignore  README.md  TODO.txt  meson.build  meson_options.txt
src/: log.h  meson.build
src/LibWR/: libwr.c  log.c  meson.build  server.c  server_session.c  server_session.h  window.c
src/LibWR/include/: libwr.h
src/LibWR/include/LibWR/: window.h
src/TestClient/: main.c  meson.build  server.c  server.h  server_session.c  server_session.h  window.c  window.h
src/WRGL/: glext.c  glext.h  log.h  meson.build  wrgl.c  wrgl_buffer.c  wrgl_context.c
src/WRGL/include/: wrgl.h
src/WRGL/include/WRGL/: buffer.h  context.h  wrgl.h
src/WindowRenderer/: application.c  application.h  input.c  input.h  log.c  log.h  main.c  main_drm.c  main_glfw.c  meson.build  server.c  server.h  session.c  session.h  types.h  window.c  window.h  window_manager.c  window_manager.h  wm.c  wm.h
src/WindowRenderer/include/: WindowRenderer.h
src/WindowRenderer/include/WindowRenderer/: windowrenderer.h
src/WindowRenderer/include/WindowRenderer/commands/: close_window.h  create_window.h  set_window_dma_buf.h
src/WindowRenderer/include/WindowRenderer/events/: mouse_button.h  mouse_move.h
src/WindowRenderer/include/WindowRenderer/responses/: window_id.h
src/WindowRenderer/input_events/: mouse.c  mouse.h
src/WindowRenderer/opengl/: gl_errors.c  gl_errors.h  index_buffer.c  shader.c  shader.h  texture.h  vertex_array.h  vertex_buffer.h
src/WindowRenderer/renderer/: glext.c  glext.h  renderer.c  renderer.h
src/WindowRenderer/renderer/opengl/: gl_errors.c  gl_errors.h  index_buffer.c  index_buffer.h  shader.c  shader.h  texture.c  texture.h  vertex_array.c  vertex_array.h  vertex_buffer.c  vertex_buffer.h
src/WindowRenderer/server/: event_list.c  event_list.h  server.c  session.c  session.h  window.c  window.h
subprojects/: srm.wrap
subprojects/packagefiles/: srm-meson-build.patch
